# doc_qna_agent

./: README.md
backend/: .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/config/: settings.py
backend/src/models/: auth.py  query.py  upload.py
backend/src/routes/: auth.py  query.py  upload.py
backend/src/services/: auth.py  database.py  llm.py
frontend/doc-qna-app/: package-lock.json  package.json
frontend/doc-qna-app/src/: App.jsx
frontend/doc-qna-app/src/components/: Chat.jsx  Login.jsx  Signup.jsx
