[tool.poetry]
name = "qna-agent-server"
version = "0.1.0"
description = ""
authors = ["Praful Patekar <prafulpatekar.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
llama-index = "^0.12.42"
python-multipart = "^0.0.20"
google-genai = "^1.20.0"
pymongo = "^4.13.2"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
